[package]
name = "csvlogparser"
version = "0.1.0"
authors = ["Matt Lord <mattalord@gmail.com>"]
description = "Parse CSV HTTP Log"
homepage = "https://github.com/mattlord/csvlogparser"
repository = "https://github.com/mattlord/csvlogparser"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
clap = "3.0.0-beta.1"
#clap = "2.33.1"

[[bin]]
name = "csvlogparser"
path = "src/csvlogparser.rs"
